<resources>
    <string name="app_name">NoteApp</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="previous_date">Previous Date</string>
    <string name="current_date">Current Date</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="next_date">Next Date</string>
    <string name="google_api_key">AIzaSyD0UPvzJFHdLUoCltVzA8H1URutmFhsLjI</string>
</resources>