<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_custom_calendar"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:paddingBottom="8dp"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center">
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/previousBtn"
            android:background="@mipmap/previous"
            android:contentDescription="@string/previous_date" />
        <TextView
            android:id="@+id/currentDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/current_date"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_weight="3"/>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/nextBtn"
            android:background="@mipmap/next"
            android:contentDescription="@string/next_date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="@color/material_dynamic_primary10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sun"
            android:background="@android:color/holo_red_light"
            android:layout_weight="1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mon"
            android:background="@android:color/holo_orange_light"
            android:layout_weight="1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tue"
            android:background="@android:color/holo_green_light"
            android:layout_weight="1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wed"
            android:background="@android:color/holo_blue_light"
            android:layout_weight="1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thu"
            android:background="@android:color/holo_purple"
            android:layout_weight="1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fri"
            android:background="@android:color/white"
            android:layout_weight="1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sat"
            android:background="@android:color/darker_gray"
            android:layout_weight="1"
            android:textStyle="bold" />
    </LinearLayout>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridView"
        android:numColumns="7" />
</LinearLayout>